// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error on unmatched pattern  1`] = `
{
  "stderr": "[error] No files matching the given patterns were found.",
  "stdout": "",
  "write": [],
}
`;

exports[`error on unmatched pattern when 2nd glob has no match, by default  1`] = `
{
  "stderr": "",
  "stdout": "const hello = "there";
{
  "hello": "there"
}
hello: there",
  "write": [],
}
`;

exports[`no error on unmatched pattern  1`] = `
{
  "stderr": "",
  "stdout": "const hello = "there";",
  "write": [],
}
`;

exports[`no error on unmatched pattern when 2nd glob has no match, with flag  1`] = `
{
  "stderr": "",
  "stdout": "const hello = "there";
{
  "hello": "there"
}
hello: there",
  "write": [],
}
`;
